@@ -187,3 +187,14 @@ int archdep_num_text_columns(void)
         return -1;
     return atoi(s);
 }
+
+int archdep_default_logger(const char *level_string, const char *format,
+                                                                va_list ap) {
+    if (fputs(level_string, stdout) == EOF
+        || vfprintf(stdout, format, ap) < 0
+        || fputc ('\n', stdout) == EOF)
+    	return -1;
+    return 0;
+}
+
+
